--- a/country/index.html
+++ b/country/index.html
@@ -79,8 +79,8 @@
                     </tr>
                     <tr>
                         <td><a href="russia/">Российская Федерация</td>
-                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png" alt=""></td>
-                        <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt=""></td>
+                        <td><img src="russia/gos-simvolika/gerb-of-Russia.png" alt="" width="100px"></td>
+                        <td><img src="russia/gos-simvolika/flag-of-Russia.png" alt="" width="100px"></td>
                         <td>Москва</td>
                         <td>Владимир Владимирович Путин</td>
                         <td><img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="250px"></td>
@@ -107,8 +107,8 @@
                     </tr>
                     <tr>
                         <td><a href="belarus/">Беларусь</a></td>
-                        <td><img src="belarus/gerb-of-Belarus.png" alt=""></td>
-                        <td><img src="belarus/flag-of-Belarus.png" alt=""></td>
+                        <td><img src="belarus/gerb-of-Belarus.png" alt="" width="100px"></td>
+                        <td><img src="belarus/flag-of-Belarus.png" alt="" width="100px"></td>
                         <td>Минск</td>
                         <td>Александр Григорьевич Лукашенко</td> 
                         <td><img src="belarus/Lukashenko.jpg" alt="" width="250px"></td>
