--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -29,7 +29,20 @@
         <br>
         <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
             download><button>Скачать Гимн России</button></a>
-        <a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3"><button>Скачать Гимн ЛНР</button></a>    
+        <a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3"><button>Скачать Гимн ЛНР</button></a> 
+        <table>
+            <tr>
+                <td rowspan="3">Ресублика</td>
+                <td><button>ww</button></td>
+            </tr>
+            <tr>
+                <td><button>dfd</button></td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+        
+        </table>   
         <footer>
             &copy; 2020-2021
             <br>
