--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -34,7 +34,7 @@
             <tr>
                 <td rowspan="3">Ресублика Беларусь</td>
                 <td><a href="/political-na-postsovet-space/country/belarus/gerb-of-Belarus.png" download><button>Скачать герб Республики Беларусь</button></a></td>
-                <td rowspan="16">Все файла нормальные <br> и не имеют вредоносного кода</td>
+                <td rowspan="17">Все файла нормальные <br> и не имеют вредоносного кода</td>
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/belarus/flag-of-Belarus.png"><button>Скачать Флаг Республики Беларусь</button></a></td>
@@ -76,7 +76,7 @@
                 <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"><button>Скачать Герб РФ</button></a></td>
             </tr>
             <tr>
-                <td rowspan="3">СССР</td>
+                <td rowspan="4">СССР</td>
                 <td><a href="/political-na-postsovet-space/country/ussr/flag-of-USSR.png"><button>Скачать Флаг СССР</button></a></td>
             </tr>
             <tr>
@@ -84,6 +84,9 @@
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png"><button>Скачать Фото Горбачёва</button></a></td>
+            </tr>
+            <tr>
+                <td><a href="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3"><button>Скачать Гимн СССР</button></a></td>
             </tr>
             
            
