--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -30,11 +30,11 @@
         <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
             download><button>Скачать Гимн России</button></a>
         <a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3"><button>Скачать Гимн ЛНР</button></a> 
-        <table border="1" rules="all">
+        <table border="1" rules="all" width="100%">
             <tr>
                 <td rowspan="3">Ресублика Беларусь</td>
                 <td><a href="/political-na-postsovet-space/country/belarus/gerb-of-Belarus.png" download><button>Скачать герб Республики Беларусь</button></a></td>
-                <td rowspan="17">Все файла нормальные <br> и не имеют вредоносного кода</td>
+                
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/belarus/flag-of-Belarus.png"><button>Скачать Флаг Республики Беларусь</button></a></td>
