--- a/contacts/index.html
+++ b/contacts/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/political-na-postsovet-space/contacts/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+    integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Поддержка</title>
 
 </head>
@@ -18,21 +20,24 @@
         <a href="/political-na-postsovet-space/country/">Страны</a>
     </header>
     <main>
-        <div id="social">
+        <div class="container">
             <br>
             <br>
             <br>
 
             <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
                 src="https://forms.yandex.ru/u/5fd26c8d8f438c63094b601d/?iframe=1" frameborder="0"
-                name="ya-form-5fd26c8d8f438c63094b601d" width="650"></iframe>
+                name="ya-form-5fd26c8d8f438c63094b601d" width="100%"></iframe>
             <br>
             <br>
             <br>
             <br>
             <br>
-            <a href="https://vk.com/club198438193"><img src="/political-na-postsovet-space/Vk.ico" alt="Вконтакте"></a>
-            <a href="https://t.me/ruzaharsovet"><img src="/political-na-postsovet-space/telegram.ico"></a>
+            <div id="social">
+            <a href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
+            <a href="https://t.me/ruzaharsovet"><img src="telegram.ico"></a>
+            <a href="mailto:zaharpeprenko2007@ya.ru">Написать</a>
+            </div>
             <br>
             <br>
             <br><script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
@@ -49,6 +54,9 @@ VK.Widgets.CommunityMessages("vk_community_messages", 198438193, {expanded: "1",
         <a href="/political-na-postsovet-space/contacts/">Поддежка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
 
 </body>
 
