--- a/putin/index.html
+++ b/putin/index.html
@@ -80,6 +80,8 @@
     <iframe width="560" height="315" src="https://frontend.vh.yandex.ru/player/vnOcwpFALeSY?from=partner&mute=1&autoplay=1&branding=0" allow="autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
 
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A028d7cf9ac8efa6aa034011fec831c26730641701a1f9b74a10cef50ffba5b52&amp;width=100%25&amp;height=404&amp;lang=ru_RU&amp;scroll=true"></script>
+
 </body>
 
 </html>
