--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -18,8 +18,6 @@
         <a href="/political-na-postsovet-space/country/"><button>Страны</button></a>
 
         <br>
-        <a href="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать Фото Путина</button></a>
-        <a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png"><button>Скачать Фото Горбачёва</button></a>
     </header>
     <main>
         <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
@@ -96,6 +94,7 @@
             &copy; 2020-2021
             <br>
             <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
+            <a href="/political-na-postsovet-space/legal/"><button>Правовая информация</button></a>
         </footer>
 </body>
 
