--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -186,6 +186,7 @@
                     </tr>
                 </tbody>
             </table>
+            <h2>Митинги против Выборов </h2>
         </div>
     </main>
     <footer>
