--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -133,7 +133,7 @@
                 не менее 2/3 от полного состава Палаты представителей.
             </p>
             <h4>Список президентов Республки Беларусь</h4>
-            <table border="1" rules="all" class="table text-info table-bordered" >
+            <table border="1" rules="all" class="table text-info table-bordered">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
@@ -148,7 +148,7 @@
                     <tr>
                         <th scope="row" rowspan="6">1</th>
                         <td>1</td>
-                        <td rowspan="6"><img src="Lukashenko.jpg" alt=""></td>
+                        <td rowspan="6"><img src="Lukashenko.jpg" alt="" width="250px"></td>
                         <td rowspan="6">Александр Григорьевич Лукашенко <br> (р. 1954)</td>
                         <td>20 июля 1994</td>
                         <td>20 сентября 2001</td>
@@ -187,6 +187,17 @@
                 </tbody>
             </table>
             <h2>Митинги против Выборов </h2>
+            <p>
+                После подсечта голосов в Республике начались митинги против того, чтобы А. Г. Лкашенко сновал встал
+                Президентом. Я считаю так: Лукашенко у "руля" уже более 20 лет он все знает что делается в стране и
+                большая часть народа поддержала его, поэтому пускай правит страной. А те кто минтигует то те люди 
+                находятся под контролем США.
+            </p>
+            <p>
+                Сша хотя подчинить себе Беларусь. Но Беларусь не сдается как и Россия.
+            </p>
+
+
         </div>
     </main>
     <footer>
