--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -153,7 +153,7 @@
                 заключений Верховного и Конституционного судов.
             </p>
             <h4>Список президентов РФ</h4>
-            <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
+            <table border="1" rules="all" class="table  table-bordered" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
@@ -223,7 +223,7 @@
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
                         <td>4 года</td>
-                        
+
                     </tr>
                     <tr>
                         <td>2</td>
@@ -276,6 +276,75 @@
             <br>
             <p>
             <div id="part"></div> - Единная Россия</p>
+            <h2>Американцы хотят вмешиваться в кправления нашей страны</h2>
+            <p>
+                Скажите мне на милость с какого перепугу они должны лезть в нашу политику? Им что своей политики не
+                хватает? Или они вообразили себе, что они Серхдержава?
+            </p>
+            <p>
+                Скажу очень просто. Россия никому не должна отчитываться о своих действиях. Мы не зависим от США. Ведь у
+                нас есть много
+                своего добра: технологии, ресурсы, свой газ и своя нефть.
+
+            </p>
+            <p>
+                Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
+            </p>
+            <table border="1" rules="all" width="100%" class="table  table-bordered">
+                <thead>
+                    <th>№</th>
+                    <th>Критерий для сравнения</th>
+                    <th>Россия</th>
+                    <th>США</th>
+                </thead>
+                <tbody class="ussr">
+                    <tr>
+                        <td>1</td>
+                        <td>Вакцина от Короновируса</td>
+                        <td>Мы произвели первую вакцину в мире "Спутник V" и с серидины декабря 2020 года начали
+                            вакцинирование населения.</td>
+                        <td>Вакцина от компании Pfizer сначала была очень недоработанной.</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Налогооблажение на товары</td>
+                        <td>У нас стоимость продукта которая написана на ценнике будет такая как и на кассе, т.к. НДС
+                            хоть и 20%, но он входит в стоимость товара.</td>
+                        <td>Налогооблажение в США чуть по-другому, например 1 кг яблок стоит 25$, но на кассе цена будет
+                            другая это зависит от налога в каждом штате.</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Преступность</td>
+                        <td>Да в Росси тоже есть преступнеость, но она ниже чем в США. Потому что наша Полиция может
+                            появиться везде, даже в самом опасном районе.</td>
+                        <td>В США преступность выше и их полиция не отличается храбростью, как наша. Из-за этого по
+                            моему мнению в США преступность выше.</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Отношение к другим нациям, рассам и т.д.</td>
+                        <td>
+                            Россия - это многонациональная страна. У нас есть, и Китайцы, и чернокожие. Согласно статье
+                            19 пункт 2 Конституции Российской Федерации говориться:
+                            <i>
+                                "Государство гарантирует равенство прав и свобод человека
+                                и гражданина независимо от пола, расы, национальности, языка,
+                                происхождения, имущественного и должностного положения, места
+                                жительства, отношения к религии, убеждений, принадлежности
+                                к общественным объединениям, а также других обстоятельств.
+                                Запрещаются любые формы ограничения прав граждан по признакам
+                                социальной, расовой, национальной, языковой или религиозной
+                                принадлежности."
+
+                            </i>
+                        </td>
+                        <td>В США последнее время, особенно в 2020 году, белые начинают изгонять Афро-американцев. Я
+                            хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет законов
+                            в которых говориться что все равны и не важно какой ты рассы"</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
     <footer>
