--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -276,7 +276,9 @@
             <br>
             <p>
             <div id="part"></div> - Единная Россия</p>
-            <h2>Американцы хотят вмешиваться в кправления нашей страны</h2>
+            <h2>Россия и США</h2>
+            <hr>
+            <h3>Американцы хотят вмешиваться в правления нашей страны</h3>
             <p>
                 Скажите мне на милость с какого перепугу они должны лезть в нашу политику? Им что своей политики не
                 хватает? Или они вообразили себе, что они Серхдержава?
@@ -291,7 +293,7 @@
                 Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
             </p>
             <table border="1" rules="all" width="100%" class="table  table-bordered">
-                <thead>
+                <thead class="table-primary">
                     <th>№</th>
                     <th>Критерий для сравнения</th>
                     <th>Россия</th>
@@ -340,11 +342,27 @@
                             </i>
                         </td>
                         <td>В США последнее время, особенно в 2020 году, белые начинают изгонять Афро-американцев. Я
-                            хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет законов
+                            хочк задать вопрос Конгрессу США: "Вы что совсем сума сошли? Или у вас, как у нас нет
+                            законов
                             в которых говориться что все равны и не важно какой ты рассы"</td>
                     </tr>
+
                 </tbody>
             </table>
+            <p>Это еще не все все остальное будет добавляться в таблицу.</p>
+            <h3>Нас обвиняют во вмешательство в выборы в США</h3>
+            <p>Я не понимаю почему именно мы? А может среди ваших людей есть крысы? </p>
+            <p>Если что-то случается в США сразу обвиняют Россию. Но зачем нам США? У нас есть свои проблемы. Наверно
+                это делается для того чтобы нас выбесить, но оин не знают наш характер.</p>
+            <h3>Санкции против России</h3>
+            <p>Скажите мне на милость что-то изменилось после того, как на нас обсерают санкциями. Ничего. Я бы на месте
+                Путина уже бы давно ограничил въезд Министров и Представителей тех стран которые на нас кидают санкции.
+            </p>
+            <p>
+
+            </p>
+
+
         </div>
     </main>
     <footer>
