--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -54,7 +54,7 @@
                 Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
                 углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
                 расправленные крылья. <img
-                    src="gerb-of-Russia.png" width="100px"> Орёл увенчан
+                    src="gerb-of-Russia.png" width="100px" class="photo"> Орёл увенчан
                 двумя
                 малыми
                 коронами и — над ними — одной большой короной, соединёнными
@@ -83,7 +83,7 @@
                 Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней —
                 белого,
                 средней — синего и нижней — красного цвета. <img
-                    src="flag-of-Russia.png" width="100px">
+                    src="flag-of-Russia.png" width="100px" class="photo">
                 Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
                 были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
                 Федерации оттенки цветов не устанавливаеть.
