--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -247,7 +247,7 @@
                     <tr>
                         <th scope="row" style="background: blue;">4</th>
                         <td>3</td>
-                        <td rowspan="2"><img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt=""></td>
+                        <td rowspan="2"><img src="800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" width="200px"></td>
                         <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
                                 Владимирович Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
