--- a/country/index.html
+++ b/country/index.html
@@ -107,8 +107,8 @@
                     </tr>
                     <tr>
                         <td><a href="belarus/">Беларусь</a></td>
-                        <td><img src="belarus/gerb-of-Belarus.png" alt="" width="100px"></td>
-                        <td><img src="belarus/flag-of-Belarus.png" alt="" width="100px"></td>
+                        <td><img src="belarus/gos-simvolika/gerb-of-Belarus.png" alt="" width="100px"></td>
+                        <td><img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" width="100px"></td>
                         <td>Минск</td>
                         <td>Александр Григорьевич Лукашенко</td> 
                         <td><img src="belarus/Lukashenko.jpg" alt="" width="250px"></td>
