--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png" image="/x-icon">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+        image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
@@ -22,7 +23,7 @@
         <div>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/" >Украина</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
@@ -34,14 +35,14 @@
     <main>
         <div class="container">
             <h1>Государственные символы России</h1>
+            <p>
+                Государственные символы России — установленные федеральными конституционными законами особые
+                отличительные знаки России, олицетворяющие её национальный суверенитет и самобытность, несущие
+                определённый идеологический смысл. Таковыми символами являются: государственный флаг, герб и гимн.
+            </p>
             <hr>
             <br>
-            <p>Государственные символы России — установленные федеральными конституционными законами особые
-                отличительные
-                знаки
-                России, олицетворяющие её национальный суверенитет и самобытность, несущие определённый идеологический
-                смысл.
-                Таковыми символами являются: государственный флаг, герб и гимн.
+            <p>
             </p>
             <br>
             <br>
@@ -53,8 +54,7 @@
             <p>
                 Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными нижними
                 углами, заострённый в оконечности красный геральдический щит с золотым двуглавым орлом, поднявшим вверх
-                расправленные крылья. <img
-                    src="gerb-of-Russia.png" width="100px" class="photo"> Орёл увенчан
+                расправленные крылья. <img src="gerb-of-Russia.png" width="100px" class="photo"> Орёл увенчан
                 двумя
                 малыми
                 коронами и — над ними — одной большой короной, соединёнными
@@ -82,8 +82,7 @@
             <p>
                 Флаг России описан как «прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней —
                 белого,
-                средней — синего и нижней — красного цвета. <img
-                    src="flag-of-Russia.png" width="100px" class="photo">
+                средней — синего и нижней — красного цвета. <img src="flag-of-Russia.png" width="100px" class="photo">
                 Отношение ширины флага к его длине — 2:3» . Оттенки цветов не
                 были установлены, потому что Федеральный конституционный закон о Государственном флаге Российской
                 Федерации оттенки цветов не устанавливаеть.
@@ -167,25 +166,26 @@
                 <p id="gimn">Предками данная мудрость народная!</p>
                 <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
             </i>
-     
-        <br>
-        <h3>Гимн России инструментал</h3>
-        <audio controls loop>
-            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                type="audio/mpeg" style="width: 100%;">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3">Скачайте
-                музыку</a>.
-        </audio>
-        <br>
-        <br>
-        <h3>Гимн России хор</h3>
-        <audio controls>
-            <source src="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3" type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3">Скачайте
-                музыку</a>.
-        </audio>
+
+            <br>
+            <h3>Гимн России инструментал</h3>
+            <audio controls loop>
+                <source src="anthem-instrumental.mp3"
+                    type="audio/mpeg" style="width: 100%;">
+                Тег audio не поддерживается вашим браузером.
+                <a href="anthem-instrumental.mp3">Скачайте
+                    музыку</a>.
+            </audio>
+            <br>
+            <br>
+            <h3>Гимн России хор</h3>
+            <audio controls>
+                <source src="anthem-choir.mp3"
+                    type="audio/mpeg">
+                Тег audio не поддерживается вашим браузером.
+                <a href="anthem-choir.mp3">Скачайте
+                    музыку</a>.
+            </audio>
         </div>
     </main>
     <footer>
