--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -27,18 +27,21 @@
         <br>
         <table border="1" rules="all" width="100%">
             <tr>
-                <td rowspan="3">Ресублика Беларусь</td>
-                <td><a href="/political-na-postsovet-space/country/belarus/gerb-of-Belarus.png" download><button>Скачать
+                <td rowspan="4">Ресублика Беларусь</td>
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png" download><button>Скачать
                             герб Республики Беларусь</button></a></td>
 
             </tr>
             <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/flag-of-Belarus.png"><button>Скачать Флаг
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"><button>Скачать Флаг
                             Республики Беларусь</button></a></td>
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/belarus/Lukashenko.jpg"><button>Скачать Фото
                             Лукашенко</button></a></td>
+            </tr>
+            <tr>
+                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3"><button>Скачать Гимн Белоруссии</button></a></td>
             </tr>
             <tr>
                 <td rowspan="2">ДНР</td>
