--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -25,6 +25,10 @@
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
+        <div id="nav-country">
+            <a href="#">Основная информация</a>
+            <a href="gos-simvolika/" id="id">Государственная символика</a>
+        </div>
     </header>
     <main>
         <div class="container">
