--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -26,8 +26,8 @@
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="#">Основная информация</a>
-            <a href="gos-simvolika/" id="id">Государственная символика</a>
+            <a href="#" id="id">Основная информация</a>
+            <a href="gos-simvolika/" >Государственная символика</a>
         </div>
     </header>
     <main>
