--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -28,6 +28,7 @@
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/" id="id">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
+            <a href="info/">Последние Новости</a>
         </div>
     </header>
     <main>
