--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -30,6 +30,7 @@
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/info/">Последние Новости</a>
         </div>
     </header>
     <main>
