--- a/contacts/index.html
+++ b/contacts/index.html
@@ -34,9 +34,9 @@
             <br>
             <br>
             <div id="social">
-            <a href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
-            <a href="https://t.me/ruzaharsovet"><img src="telegram.ico"></a>
-            <a href="mailto:zaharpeprenko2007@ya.ru">Написать</a>
+            <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
+            <a target="_blank" href="https://t.me/AGENT_KGB_228"><img src="telegram.ico"></a>
+            
             </div>
             <br>
             <br>
