--- a/legal/index.html
+++ b/legal/index.html
@@ -1,33 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="ussr/gerb-of-USSR.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
+    <title>Правовая информация</title>
+
 </head>
 
 <body>
-    <script type="text/javascript">
-        setInterval(function () {
-            date = new Date(),
-                h = date.getHours(),
-                m = date.getMinutes(),
-                s = date.getSeconds(),
-                h = (h < 10) ? '0' + h : h,
-                m = (m < 10) ? '0' + m : m,
-                s = (s < 10) ? '0' + s : s,
-                document.getElementById('time').innerHTML = h + ':' + m;
-        }, 1000);
-    </script>
-    
+    <header>
+        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <div>
+            <a href="/political-na-postsovet-space/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/lnr/">ЛНР</a>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <h1>Пользовательское соглашение</h1>
+            <hr>
+            <ol>
+                <li>
+                    <b>Общие положения</b>
+                    <ol>
+                        <li> МЫ предлагает пользователю сети Интернет (далее –
+                            Пользователь) -
+                            использовать наш сайт, изложенных в настоящем Пользовательском соглашении
+                            (далее —
+                            «Соглашение», «ПС»).
+                        </li>
+                        <li>Большая часть информации взята с <a href="https://ru.wikipedis.org" class="sos">Wikipedia</a> и др источников информации. Но некоторые данные мы сами Написали</li>
+                    </ol>
+                </li>
+                <li></li>
+            </ol>
 
-    <span style="color:#000000; width: auto;">
-        <span id="time">00:00:00</span>
-    </span>
+        </div>
+
+
+
+
+
+    </main>
+    <footer>
+        <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
+        <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+    </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
