--- a/country/lnr/gos-simvolika/index.html
+++ b/country/lnr/gos-simvolika/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/political-na-postsovet-space/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="gerb-of-Lnr.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -182,6 +182,7 @@
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
+    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous">
         </script>
