--- a/putin/index.html
+++ b/putin/index.html
@@ -11,7 +11,8 @@
 
     <a href="m"><button>Перейти</button></a>
     <br>
-
+    &copy; 2020-2021 ООО "СССР"
+    <br><br><br>
 
     <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aabdaf16339bf15a63b25b793baa0d45b8018a2775982605f81b9b7fb575aa6db&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
