--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -109,11 +109,11 @@
 
         </table>
         <footer>
-            &copy; 2020-2021
-            <br>
+          
             <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
             <a href="/political-na-postsovet-space/legal/"><button>Правовая информация</button></a>
         </footer>
+        <footer>&copy; 2020-2021 ООО "СССР"</footer>
 </body>
 
 </html>
