--- a/contacts/index.html
+++ b/contacts/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
-    integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Поддержка</title>
 
 </head>
@@ -34,26 +34,29 @@
             <br>
             <br>
             <div id="social">
-            <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
-            <a target="_blank" href="https://t.me/AGENT_KGB_228"><img src="telegram.ico"></a>
-            
+                <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
+                <a target="_blank" href="https://t.me/AGENT_KGB_228"><img src="telegram.ico"></a>
+
             </div>
             <br>
             <br>
-            <br><script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+            <br>
+            <br><br><br><br><br><br><br><br><br><br>
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-<!-- VK Widget -->
-<div id="vk_community_messages"></div>
-<script type="text/javascript">
-VK.Widgets.CommunityMessages("vk_community_messages", 198438193, {expanded: "1",tooltipButtonText: "Есть вопрос?"});
-</script>
-            
+            <!-- VK Widget -->
+            <div id="vk_community_messages"></div>
+            <script type="text/javascript">
+                VK.Widgets.CommunityMessages("vk_community_messages", 198438193, { expanded: "1", tooltipButtonText: "Есть вопрос?" });
+            </script>
+
         </div>
     </main>
     <footer>
         <a href="/political-na-postsovet-space/contacts/">Поддежка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
+    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
