--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -164,6 +164,7 @@
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
     </footer>
+    <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
