--- a/legal/index.html
+++ b/legal/index.html
@@ -57,6 +57,7 @@
     <footer>
         <a href="/political-na-postsovet-space/contacts/">Поддержка</a>
         <a href="/political-na-postsovet-space/legal/">Правовая информация</a>
+        <a href="/political-na-postsovet-space/putin/m"></a>
     </footer>
     <footer>&copy; 2020-2021 ООО "СССР"</footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
