--- a/contacts/index.html
+++ b/contacts/index.html
@@ -24,16 +24,24 @@
             <br>
             <br>
             <br>
-
-            <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
-                src="https://forms.yandex.ru/u/5fd26c8d8f438c63094b601d/?iframe=1" frameborder="0"
-                name="ya-form-5fd26c8d8f438c63094b601d" width="100%"></iframe>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <div id="social">
+                <h2>Обратная связь</h2>
+                <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
+                    src="https://forms.yandex.ru/u/5fd26c8d8f438c63094b601d/?iframe=1" frameborder="0"
+                    name="ya-form-5fd26c8d8f438c63094b601d" width="100%">
+                </iframe>
+                <h3>контакты</h3>
+                <p>Почта <a href="mailto:zaharpeprenko2007@yandex.ru">zaharpeprenko2007@yandex.ru</a></p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <div id="social">
+                <h2>Мы в соц сетях</h2>
+                <hr>
                 <a target="_blank" href="https://vk.com/club198438193"><img src="Vk.ico" alt="Вконтакте"></a>
                 <a target="_blank" href="https://t.me/AGENT_KGB_228"><img src="telegram.ico"></a>
 
