--- a/contacts/index.html
+++ b/contacts/index.html
@@ -25,13 +25,15 @@
             <br>
             <br>
             <div id="social">
-                <h2>Обратная связь</h2>
+                <h1>Обратная связь</h1>
+                <hr>
                 <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script><iframe
                     src="https://forms.yandex.ru/u/5fd26c8d8f438c63094b601d/?iframe=1" frameborder="0"
                     name="ya-form-5fd26c8d8f438c63094b601d" width="100%">
                 </iframe>
                 <h3>контакты</h3>
-                <p>Почта <a href="mailto:zaharpeprenko2007@yandex.ru">zaharpeprenko2007@yandex.ru</a></p>
+                <p>Почта: <a href="mailto:zaharpeprenko2007@yandex.ru">zaharpeprenko2007@yandex.ru</a></p>
+                <p><a target="_blank" href="https://vk.me/club198438193"><img src="Vk.ico" alt="Вконтакте"></a></p>
             </div>
             <br>
             <br>
