--- a/contacts/index.html
+++ b/contacts/index.html
@@ -33,7 +33,7 @@
                 </iframe>
                 <h3>контакты</h3>
                 <p>Почта: <a href="mailto:zaharpeprenko2007@yandex.ru">zaharpeprenko2007@yandex.ru</a></p>
-                <p><a target="_blank" href="https://vk.me/club198438193"><img src="Vk.ico" alt="Вконтакте"></a></p>
+                <p><a target="_blank" href="https://vk.me/club198438193">Написать в Вконтакте</a></p>
             </div>
             <br>
             <br>
