--- a/putin/m/index.html
+++ b/putin/m/index.html
@@ -29,12 +29,12 @@
             <tr>
                 <td rowspan="4">Ресублика Беларусь</td>
                 <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png" download><button>Скачать
-                            герб Республики Беларусь</button></a></td>
+                            герб РБ</button></a></td>
 
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"><button>Скачать Флаг
-                            Республики Беларусь</button></a></td>
+                            РБ</button></a></td>
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/belarus/Lukashenko.jpg"><button>Скачать Фото
@@ -77,7 +77,7 @@
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                        download><button>Скачать Гимн России инструментал</button></a></td>
+                        download><button>Скачать Гимн России </button></a></td>
             </tr>
             <tr>
                 <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"><button>Скачать
