--- a/legal/index.html
+++ b/legal/index.html
@@ -40,10 +40,31 @@
                             (далее —
                             «Соглашение», «ПС»).
                         </li>
-                        <li>Большая часть информации взята с <a href="https://ru.wikipedis.org" class="sos">Wikipedia</a> и др источников информации. Но некоторые данные мы сами Написали</li>
+                        
                     </ol>
                 </li>
-                <li></li>
+                <li>
+                    <b>Ответственность</b>
+                    <ol>
+                        <li>Мы не несёем ответственности за то, что вы скачиваете и изменяите контент.</li>
+                        <li>За издевальетство над скачаным контентом ответственность вы несёте сами
+                            <ol>
+                                <li>За издевательство и надругательство над символами РФ и СССР вы несете ответственность по статье 329 УК РФ.</li>
+                                <li>За издевательство и надругательство над символами РБ и СССР вы несете ответственность по статье 370 УК РБ.</li>
+                                <li>За издевательство и надругательство над символами Украины вы несете ответственность по статье 338 УК Украины.</li>
+                            </ol>
+                        </li>
+                        
+                    </ol>
+                </li>
+                <li>
+                    <b>Контент</b>
+                    <ol>
+                        <li>Большая часть информации взята с <a href="https://ru.wikipedia.org" class="sos">Wikipedia</a> и др источников информации. Но некоторые данные мы сами Написали</li>
+                        <li>Весь контент размещенный на сайте не призывает к митингам, восстаниям и т. п.</li>
+                        <li>Контент размещенный на сайте является нашим мнением.</li>
+                    </ol>
+                </li>
             </ol>
 
         </div>
