--- a/legal/index.html
+++ b/legal/index.html
@@ -54,6 +54,7 @@
                                 <li>За издевательство и надругательство над символами Украины вы несете ответственность по статье 338 УК Украины.</li>
                             </ol>
                         </li>
+                        <li>Мы предирживаемся Законодательству Российской Федерации и Республики Беларусь.</li>
                         
                     </ol>
                 </li>
