--- a/country/russia/info/index.html
+++ b/country/russia/info/index.html
@@ -26,7 +26,7 @@
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/russia/" >Основная информация</a>
+            <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
 
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
             <a href="" id="id">Последние Новости</a>
@@ -175,6 +175,23 @@
 
                 </tbody>
             </table>
+            <br><br><br><br><br>
+            <h1>Навальный в России</h1>
+            <p>17 янвавря 2021 Навальный прилетел в России и сразу его арестовали. По мне правильно сделали. Он шпион
+                США - враг России. </p>
+            <p>Скажу я так, что для меня Навальный - это предатель Родины. Он никогда больше не изменится. Он уже
+                подчиняется США, чтобы через него получить доступ к управлению нашей страны. Но пока Путин президент у
+                США ничего не выйдет.
+            </p>
+            <p>
+                23 января будет митинг. И че? Смысл этого митинга. Вот скажите кто этот Навальный? Он предатель Родины.
+                Если он станет президентом, что сразу не будет коррупции? Или то что дороги станут качественнее Или чем вам Путин не нравится?
+            </p>
+            <p>
+                Путин - хороший президент. Он поднял нашу страну из забвения. Да и у него есть косяки, но зачем его
+                свергать. Наоборот его сергать не надо, пусть будет правит страной. Ону же знает что надо делать.
+                А Навальный? станет президентом и ничего он не знает что творится в стране.
+            </p>
 
 
 
