--- a/legal/index.html
+++ b/legal/index.html
@@ -85,6 +85,10 @@
 
                     </ol>
                 </li>
+                <li><b>Реклама</b></li>
+                <ol>
+                    <li>Мы несет ответственность за рекламу, размещенную нами на сайте, в пределах, установленных законодательством РФ.</li>
+                </ol>
             </ol>
 
         </div>
