--- a/legal/index.html
+++ b/legal/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li><b>Реклама</b></li>
                 <ol>
-                    <li>Мы несет ответственность за рекламу, размещенную нами на сайте, в пределах, установленных законодательством РФ.</li>
+                    <li>Мы несем ответственность за рекламу, размещенную нами на сайте, в пределах, установленных законодательством РФ.</li>
                 </ol>
             </ol>
 
