--- a/test/index.html
+++ b/test/index.html
@@ -36,6 +36,12 @@
 <body>
 
     <div class="container ">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
         <div class="row">
             <div class="col-1 ussr">
                 <a href="#">❗</a>
