--- a/legal/index.html
+++ b/legal/index.html
@@ -28,7 +28,7 @@
         <div id="nav-country">
             <a href="" id="id">Пользоваетльское соглашение</a>
             <a href="confidential/">Политика Конфиденциальности</a>
-           
+
         </div>
     </header>
     <main>
@@ -48,6 +48,7 @@
 
                     </ol>
                 </li>
+                <br>
                 <li>
                     <b>Ответственность</b>
                     <ol>
@@ -74,6 +75,7 @@
                         </ol>
                     </ol>
                 </li>
+                <br>
                 <li>
                     <b>Контент</b>
                     <ol>
@@ -85,10 +87,28 @@
 
                     </ol>
                 </li>
-                <li><b>Реклама</b></li>
-                <ol>
-                    <li>Мы несем ответственность за рекламу, размещенную нами на сайте, в пределах, установленных законодательством РФ.</li>
-                </ol>
+                <br>
+                <li><b>Реклама</b>
+                    <ol>
+                        <li>Мы несем ответственность за рекламу, размещенную нами на сайте, в пределах, установленных
+                            законодательством РФ.</li>
+                    </ol>
+                </li>
+                <br>
+                <li>
+                    <b>
+                        Игры
+                    </b>
+                    <ol>
+                        <li>Мы разрабатываем простые web-игры про политику.
+                            <br>
+                            <b>Внимание!!! Данные игры являются игровым сюжетом. Совпадения с реальной жизнью случайны.
+                            </b>
+
+                        </li>
+                        <li>Играя в web-игры вы принимаете <a href="confidential/" class="sos">политику конфиденциальности</a></li>
+                    </ol>
+                </li>
             </ol>
 
         </div>
