--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     
     <header>
         <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
-        <a href="news">Последние новости</a>
+        <a href="news" title="Новости">Последние новости</a>
         <a href="country/">Страны</a>
         <div class="alert alert-warning" role="alert">
-            Внимание 23.01.2021 с 11:00 по 12:00 по МСК сайт временно работать не будет
+            Внимание!!! 23.01.2021 с 11:00 по 12:00 по МСК сайт временно работать не будет!!!
           </div>
     </header>
     
