--- a/legal/index.html
+++ b/legal/index.html
@@ -100,7 +100,7 @@
                         Игры
                     </b>
                     <ol>
-                        <li>Мы разрабатываем простые web-игры про политику.
+                        <li>Мы разрабатываем простые <a href="/games/" class="sos">web-игры</a> про политику.
                             <br>
                             <b>Внимание!!! Данные игры являются игровым сюжетом. Совпадения с реальной жизнью случайны.
                             </b>
