--- a/legal/index.html
+++ b/legal/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="confidential/RKN.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Правовая информация</title>
+    <title>Пользовательское соглашение</title>
 
 </head>
 
